--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="hello_world3">Hello Three World!</string>
     <string name="hello_world4">Hello Four World!</string>
     <string name="action_settings">Settings</string>
+    <string name="done_button">Done</string>
+
+    <string-array name="vehicles_array">
+        <item>Car</item>
+        <item>Plane</item>
+        <item>Motorbike</item>
+        <item>Bus</item>
+        <item>Train</item>
+    </string-array>
 </resources>
