--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="hello_world4">Hello Four World!</string>
     <string name="action_settings">Settings</string>
     <string name="done_button">Done</string>
+    <string name="titleListTrips">Trips</string>
 
     <string-array name="vehicles_array">
         <item>Car</item>
