Eleven (before integrating)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,18 @@
     <string name="action_settings">Settings</string>
     <string name="done_button">Done</string>
     <string name="titleListTrips">Trips</string>
+    <string name="instructions_body1">
+        \ - You must enter \'Category\' at least\n
+        - Typing in a distance will cause the \'CO2\' field to update in real time\n
+        - CO2 is calculated by multiplying the distance by the specific factor for each vehicle type\n
+        - This factor assumes a typical number of passengers for that particular vehicle\n
+        - Press \'Done\' when you are finished entering information\n
+    </string>
+
+    <string name="instructions_body2">
+        \ - Tap \'Delete\' the trip\n
+        - Tap \'Edit\' to edit its information
+    </string>
 
     <string-array name="vehicles_array">
         <item>Car</item>
