--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,40 @@
 <resources>
     <string name="app_name">Integration</string>
 
-    <string name="hello_world1">Hello One World!</string>
-    <string name="hello_world2">Hello Two World!</string>
-    <string name="hello_world3">Hello Three World!</string>
-    <string name="hello_world4">Hello Four World!</string>
+
+
+    <!-- Active 2's String  -->
+    <string name="a2_app_name">TASK AND TIME TRACKER</string>
+
+
+    <string name="a2_til_taskid">TASK ID</string>
+    <string name="a2_til_title">TITLE</string>
+    <string name="a2_til_category">CATEGORY</string>
+    <string name="a2_til_duration">DURATION</string>
+    <string name="a2_til_priority">PORIORITY</string>
+    <string name="a2_til_note">NOTE</string>
+    <string name="a2_til_date">DATE</string>
+    <string name="a2_til_instructor">READ ME</string>
+    <string name="a2_til_taskdetail">TASK DETAILS</string>
+
+
+    <string name="a2_btn_tasklist">TASK LIST</string>
+    <string name="a2_btn_OK">OK</string>
+    <string name="a2_btn_addnewtask">ADD NEW TASK</string>
+    <string name="a2_btn_summary">CATEGORY SUMMARY</string>
+    <string name="a2_btn_cancel">CANCEL</string>
+    <string name="a2_btn_save">SAVE</string>
+    <string name="a2_btn_delete">DELETE</string>
+
+
+
+    <string-array name="a2_priority_array">
+        <item>Low</item>
+        <item>Med</item>
+        <item>High</item>
+    </string-array>
+
+    <!-- A3 -CarbCalculator Strings -->
     <string name="action_settings">Settings</string>
     <string name="done_button">Done</string>
     <string name="titleListTrips">Trips</string>
